--- a/languages/document-gallery-es_ES.po
+++ b/languages/document-gallery-es_ES.po
@@ -8,7 +8,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2014-04-14 18:48-0600\n"
+"PO-Revision-Date: 2014-04-20 21:59-0600\n"
 "Last-Translator: Dan Rossiter <dan.rossiters@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "X-Generator: Poedit 1.6.4\n"
@@ -65,8 +65,8 @@ msgid "Only look for attachments in post where [dg] is used"
 msgstr "Buscar sólo los archivos adjuntos en correos donde se utiliza [dg]"
 
 #: admin/class-admin.php:152
-msgid "Ascending or decending sorting of documents"
-msgstr "Clasificación de documentosascendente o descendente"
+msgid "Ascending or descending sorting of documents"
+msgstr "Clasificación de documentos ascendente o descendente"
 
 #: admin/class-admin.php:165
 msgid "Which field to order documents by"
