--- a/languages/document-gallery.pot
+++ b/languages/document-gallery.pot
@@ -2,9 +2,9 @@
 # This file is distributed under the same license as the Document Gallery package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Document Gallery 2.0.7\n"
+"Project-Id-Version: Document Gallery 2.0.9\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/document-gallery\n"
-"POT-Creation-Date: 2014-04-14 23:48:01+00:00\n"
+"POT-Creation-Date: 2014-04-21 02:57:10+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,7 +20,7 @@ msgstr ""
 msgid "Document Gallery Settings"
 msgstr ""
 
-#. #-#-#-#-#  plugin.pot (Document Gallery 2.0.7)  #-#-#-#-#
+#. #-#-#-#-#  plugin.pot (Document Gallery 2.0.9)  #-#-#-#-#
 #. Plugin Name of the plugin/theme
 #: admin/class-admin.php:38
 msgid "Document Gallery"
@@ -63,7 +63,7 @@ msgid "Only look for attachments in post where [dg] is used"
 msgstr ""
 
 #: admin/class-admin.php:143
-msgid "Ascending or decending sorting of documents"
+msgid "Ascending or descending sorting of documents"
 msgstr ""
 
 #: admin/class-admin.php:156
