* Fixing bug reported by demur in class-admin * Adding new Russian & Ukranian translations for DG 2.2
git-svn-id: https://plugins.svn.wordpress.org/document-gallery/trunk@988772 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/languages/document-gallery-sv_SE.po
+++ b/languages/document-gallery-sv_SE.po
@@ -5,14 +5,14 @@ msgstr ""
 "Project-Id-Version: Document Gallery 2.2\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/document-gallery\n"
 "POT-Creation-Date: 2014-09-04 02:15:50+00:00\n"
+"PO-Revision-Date: 2014-09-12 19:44-0600\n"
+"Last-Translator: P. E.\n"
+"Language-Team: P. E.\n"
+"Language: sv_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2014-09-06 16:26+0100\n"
-"Last-Translator: P. E.\n"
-"Language-Team: P. E.\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Language: sv_SE\n"
 "X-Generator: Poedit 1.6.9\n"
 
 #: admin/class-admin.php:28
