--- a/languages/document-gallery-fr_FR.po
+++ b/languages/document-gallery-fr_FR.po
@@ -8,10 +8,10 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2014-09-03 13:02+0100\n"
+"PO-Revision-Date: 2014-09-12 19:47-0600\n"
 "Last-Translator: Marc LIOTARD <tech@trafic-influence.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"X-Generator: Poedit 1.5.4\n"
+"X-Generator: Poedit 1.6.9\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Language: fr\n"
 
